fix: Link color hard to read

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -13,7 +13,7 @@
 
 @use "@material/elevation/mdc-elevation";
 
-$link: color-palette.$cyan-300;
+$link: color-palette.$blue-800;
 
 html,
 body {
